# python_cxx

./: CMakeLists.txt
inc/: camera.h  tcp.h  three_camera.h
src/: camera.cpp  main.cpp  tcp.cpp  three_camera.cpp
